[gd_scene load_steps=7 format=3 uid="uid://b0oikmo6jwhk5"]

[ext_resource type="PackedScene" uid="uid://kxq5qoceby11" path="res://scenes/control_point_bar.tscn" id="1_mxuch"]
[ext_resource type="Script" uid="uid://cu045jqh1suqn" path="res://scenes/main.gd" id="1_rdj1o"]
[ext_resource type="PackedScene" uid="uid://cu235283v7n2w" path="res://scenes/progress_bar.tscn" id="2_812s5"]
[ext_resource type="PackedScene" uid="uid://ynkomokhdk67" path="res://scenes/timer_bar.tscn" id="2_tefeu"]
[ext_resource type="Texture2D" uid="uid://bohay0jyb647v" path="res://assets/kenney_ui-pack-space-expansion/button_square_depth.svg" id="5_n5yif"]
[ext_resource type="Texture2D" uid="uid://dv8xbwp2jtnwd" path="res://assets/kenney_ui-pack-space-expansion/panel_square_screws.svg" id="6_ijc56"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rdj1o")

[node name="BGColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="TimerBar" parent="." instance=ExtResource("2_tefeu")]
position = Vector2(384, 128)

[node name="TimeRemainingLineEdit" type="LineEdit" parent="."]
visible = false
offset_left = 896.0
offset_top = 32.0
offset_right = 1024.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
flat = true

[node name="ControlPointBar" parent="." instance=ExtResource("1_mxuch")]
position = Vector2(960, 128)

[node name="ProgressBarBlue" parent="." instance=ExtResource("2_812s5")]
position = Vector2(256, 32)
color = 1

[node name="ProgressBarRed" parent="." instance=ExtResource("2_812s5")]
position = Vector2(1024, 32)

[node name="MadeByLabel" type="Label" parent="."]
offset_left = 1664.0
offset_top = 960.0
offset_right = 1856.0
offset_bottom = 1024.0
text = "Oh No! I'm A Bean!'s
Neb Score Calculator
Thanks to localmathblob"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryConditionsLabel" type="Label" parent="."]
offset_left = 704.0
offset_top = 256.0
offset_right = 1216.0
offset_bottom = 696.0
text = "Welcome to neb score calc!

See the description or readme for usage instructions"
horizontal_alignment = 1

[node name="BlueTeamScore" type="LineEdit" parent="."]
offset_left = 128.0
offset_top = 32.0
offset_right = 256.0
offset_bottom = 96.0
text = "1000"
alignment = 1
flat = true

[node name="RedTeamScore" type="LineEdit" parent="."]
offset_left = 1664.0
offset_top = 32.0
offset_right = 1792.0
offset_bottom = 96.0
text = "1000"
alignment = 1
flat = true

[node name="SyncTimerTickScoreButton" type="TextureButton" parent="."]
offset_left = 192.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 192.0
texture_normal = ExtResource("5_n5yif")
texture_pressed = ExtResource("6_ijc56")

[node name="ManualScoreTickButton" type="TextureButton" parent="."]
offset_left = 192.0
offset_top = 320.0
offset_right = 256.0
offset_bottom = 384.0
texture_normal = ExtResource("5_n5yif")
texture_pressed = ExtResource("6_ijc56")

[node name="TimerResetButton" type="TextureButton" parent="."]
offset_left = 192.0
offset_top = 448.0
offset_right = 256.0
offset_bottom = 512.0
texture_normal = ExtResource("5_n5yif")
texture_pressed = ExtResource("6_ijc56")

[node name="TimerResetTickScoreLabel" type="Label" parent="."]
offset_left = 64.0
offset_top = 192.0
offset_right = 257.0
offset_bottom = 215.0
text = "Press to sync score timer and tick score

Score limit:"

[node name="SeperateTimerResetTickScoreLabel" type="Label" parent="."]
offset_left = 256.0
offset_top = 320.0
offset_right = 403.0
offset_bottom = 395.0
text = "Press to tick score




Press to sync timer"

[node name="ScoreLimit" type="LineEdit" parent="."]
offset_left = 153.0
offset_top = 242.0
offset_right = 281.0
offset_bottom = 273.0
text = "1000"
placeholder_text = "Point Limit"

[node name="AddControlPointButton" type="Button" parent="." groups=["control_point"]]
offset_left = 512.0
offset_top = 256.0
offset_right = 612.0
offset_bottom = 306.0
text = "Add Cap"

[node name="RemoveControlPointButton" type="Button" parent="."]
offset_left = 512.0
offset_top = 320.0
offset_right = 628.0
offset_bottom = 370.0
text = "Remove Cap"

[connection signal="pressed" from="SyncTimerTickScoreButton" to="." method="_on_sync_timer_tick_score_button_pressed"]
[connection signal="pressed" from="ManualScoreTickButton" to="." method="_on_manual_score_tick_button_pressed"]
[connection signal="pressed" from="TimerResetButton" to="." method="_on_timer_reset_button_pressed"]
[connection signal="pressed" from="AddControlPointButton" to="." method="_on_add_control_point_button_pressed"]
[connection signal="pressed" from="RemoveControlPointButton" to="." method="_on_remove_control_point_button_pressed"]
